# JavaWallet

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/javawallet/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/: btc_oracle_core_wrapper_Script_network_type.h  btc_oracle_core_wrapper_Transaction_Input.h  btc_oracle_core_wrapper_Transaction_Output.h
app/src/main/java/btc_oracle_core_wrapper/: Script.java  Transaction.java
app/src/main/java/com/example/javawallet/: MainActivity.java
app/src/main/jni/: btc_oracle_core_wrapper_Script.cpp  btc_oracle_core_wrapper_Script.h  btc_oracle_core_wrapper_Transaction.cpp  btc_oracle_core_wrapper_Transaction.h  jni_utils.cpp  jni_utils.h
app/src/main/jniLibs/include/btc_oracle_core/: btc_oracle_core.hpp  network_type.h  oracle_key.h  oracle_script.h  oracle_server_pubkeys.h  oracle_utils.h  transaction.h
app/src/main/res/layout/: content_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/javawallet/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
